--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
     "pm2:logs": "pm2 logs clinicamed"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "recharts": "^2.10.3",
-    "react-big-calendar": "^1.8.2",
-    "react-hook-form": "^7.48.2",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
-    "moment": "^2.29.4",
-    "zustand": "^4.4.7",
+    "express": "^4.18.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
-    "express": "^4.18.2"
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-big-calendar": "^1.8.2",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@types/react-big-calendar": "^1.8.7",
-    "@types/moment": "^2.13.0",
     "@types/express": "^4.17.21",
+    "@types/moment": "^2.13.0",
+    "@types/react": "^18.2.43",
+    "@types/react-big-calendar": "^1.8.7",
+    "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -45,6 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
+    "terser": "^5.46.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
